[gd_scene load_steps=10 format=2]

[ext_resource path="res://res/interface/gold/GoldCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/interface/Interface.gd" type="Script" id=2]
[ext_resource path="res://res/interface/box.png" type="Texture" id=3]
[ext_resource path="res://res/props/hot_air_balloon_icon.png" type="Texture" id=4]
[ext_resource path="res://res/characters/character1_maud_small_face.png" type="Texture" id=5]
[ext_resource path="res://res/interface/theme/default_theme.tres" type="Theme" id=6]
[ext_resource path="res://res/props/sword_icon.png" type="Texture" id=7]
[ext_resource path="res://res/interface/HealthCounter.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "DisplayMainMsg"
length = 4.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("MainMsg:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 3, 4 )
}

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthCounter" parent="." instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -216.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = 112.0

[node name="GoldCounter" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -424.0
margin_top = 32.0
margin_right = -240.0
margin_bottom = 112.0

[node name="Inventory" type="NinePatchRect" parent="."]
margin_left = 24.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 112.0
rect_min_size = Vector2( 50, 0 )
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Inventory"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -35.0
margin_right = 60.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HotAirBalloonButton" type="Button" parent="Inventory/HBox"]
margin_right = 44.0
margin_bottom = 70.0
icon = ExtResource( 4 )
flat = true

[node name="PlayerButton" type="Button" parent="Inventory/HBox"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 70.0
icon = ExtResource( 5 )
flat = true

[node name="SwordButton" type="Button" parent="Inventory/HBox"]
margin_left = 96.0
margin_right = 140.0
margin_bottom = 70.0
icon = ExtResource( 7 )
flat = true

[node name="MainMsg" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -184.0
margin_right = 352.0
margin_bottom = 8.0
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="MainMsg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -88.0
margin_right = 336.0
margin_bottom = 104.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center][color=red][wave amp=50 freq=2]You fainted![/wave][/color][/center]
The Village elder took you back to the village, but you've lost your gold."
text = "You fainted!
The Village elder took you back to the village, but you've lost your gold."
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DisplayMainMsg = SubResource( 1 )
[connection signal="pressed" from="Inventory/HBox/HotAirBalloonButton" to="." method="_on_HotAirBalloonButton_pressed"]
[connection signal="pressed" from="Inventory/HBox/PlayerButton" to="." method="_on_PlayerButton_pressed"]
[connection signal="pressed" from="Inventory/HBox/SwordButton" to="." method="_on_SwordButton_pressed"]
